--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -386,7 +386,8 @@ input {
 
 #login button {
     outline: none !important;
-    border: none
+    border: none;
+    margin: 0 0 15px 0;/**/
 }
 
 @media (max-width: 768px) {
