--- a/src/app/components/registro/registro.component.css
+++ b/src/app/components/registro/registro.component.css
@@ -73,7 +73,7 @@
     padding: 20px 45px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    width: 100%
+    width: 100%;
 }
 
 .login100-form {
@@ -386,7 +386,8 @@ input {
 
 #login button {
     outline: none !important;
-    border: none
+    border: none;
+    margin: 0 0 15px 0;/**/
 }
 
 @media (max-width: 768px) {
