--- a/src/app/components/menu-principal/menu-principal.component.html
+++ b/src/app/components/menu-principal/menu-principal.component.html
@@ -2,17 +2,22 @@
 <div>
   <div class="header-blue">
       <nav class="navbar navbar-light navbar-expand-md navigation-clean-search">
-          <div class="container-fluid"><a class="navbar-brand" href="#">OLVI</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+          <div class="container-fluid"><a class="navbar-brand" [routerLink]="['/']">OLVI</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
               <div class="collapse navbar-collapse" id="navcol-1">
                   <ul class="nav navbar-nav">
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="#">Perfil</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" [routerLink]="['/perfil']">Perfil</a></li>
                       <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Juegos</a>
                           <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Logo design</a><a class="dropdown-item" role="presentation" href="#">Banner design</a><a class="dropdown-item" role="presentation" href="#">content writing</a></div>
                       </li>
                   </ul>
                   <form class="form-inline mr-auto" target="_self">
-                      
-                  </form><span class="navbar-text"> <a class="login" href="#">Ingreso</a></span><a class="btn btn-light action-button" role="button" href="#">Registro</a>
+                  </form><span *ngIf="usuario$ | async as usuario; else login"><span class="navbar-text" *ngIf="usuario"><a class="logout" (click)="salir()">Logout</a><a class="login" >{{usuario?.email }}</a></span><span *ngIf="!usuario"></span></span>
+                  <ng-template #login>
+                        <span class="navbar-text" >
+                            <a class="login" [routerLink]="['/login']">Ingreso</a>
+                            <a class="btn btn-light action-button" role="button" [routerLink]="['/registro']">Registro</a>
+                          </span>
+                  </ng-template>
               </div>
           </div>
       </nav>
