--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -7,14 +7,50 @@
                   <div class="col-md-5 col-md-offset-1">
                       <div class="login_topimg"> </div>
                       <div class="wrap-login100">
-                          <form class="login100-form validate-form"> <span class="login100-form-title "> Registro </span> <span class="login100-form-subtitle m-b-16"> Creando cuenta </span>
-                            <div class="wrap-input100 validate-input m-b-16" data-validate="Valid email is required: ex@abc.xyz"> <input class="input100" type="text" name="nombre" placeholder="Nombre" required> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
-                            <div class="wrap-input100 validate-input m-b-16" data-validate="Valid email is required: ex@abc.xyz"> <input class="input100" type="text" name="apellido" placeholder="Apellido" required> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
-                              <div class="wrap-input100 validate-input m-b-16" data-validate="Valid email is required: ex@abc.xyz"> <input class="input100" type="text" name="Username" placeholder="Correo" required> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
-                              <div class="wrap-input100 validate-input m-b-16" data-validate="Password is required"> <input class="input100" type="password" name="pass" placeholder="Contraseña"> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-lock"></span> </span> </div>
+                          <form [formGroup]="registroForm" class="login100-form validate-form" (ngSubmit)="registrarse()" > <span class="login100-form-title "> Registro </span> <span class="login100-form-subtitle m-b-16"> Creando cuenta </span>
+                            <div class="wrap-input100 validate-input m-b-16" > <input class="input100" id="nombre" type="text" formControlName="nombre" placeholder="Nombre" required> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
+                            
+                            <div class="alert-danger"  *ngIf="registroForm.controls.nombre.invalid  && (registroForm.controls.nombre.dirty || registroForm.controls.nombre.touched)" >
+                                <div class="container-error-message" *ngIf="registroForm.controls.nombre.hasError('required')">
+                                    El nombre is requerido
+                                  </div>
+                                  <div class="container-error-message" *ngIf="registroForm.controls.nombre.hasError('minlength')">
+                                    El nombre debe tener minimo 5 caracteres
+                                  </div>
+                            </div>
+                            <div class="wrap-input100 validate-input m-b-16" > <input class="input100" type="text" formControlName="apellido" placeholder="Apellido" required> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
+                            <div class="alert-danger"  *ngIf="registroForm.controls.apellido.invalid  && (registroForm.controls.apellido.dirty || registroForm.controls.apellido.touched)" >
+                                <div class="container-error-message" *ngIf="registroForm.controls.apellido.hasError('required')">
+                                    El apellido is requerido
+                                  </div>
+                                  <div class="container-error-message" *ngIf="registroForm.controls.apellido.hasError('minlength')">
+                                    El nombre debe tener minimo 5 caracteres
+                                  </div>
+                            </div>
+                              <div class="wrap-input100 validate-input m-b-16" > <input class="input100" type="email" formControlName="email" placeholder="Correo" required> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
+                              <div class="alert-danger"  *ngIf="registroForm.controls.email.invalid  && (registroForm.controls.email.dirty || registroForm.controls.email.touched)" >
+                                <div class="container-error-message" *ngIf="registroForm.controls.email.hasError('required')">
+                                    El Correo is requerido
+                                  </div>
+                                  <div class="container-error-message" *ngIf="registroForm.controls.email.hasError('minlength')">
+                                    El Correo debe tener minimo 11 caracteres
+                                  </div>
+                                  <div class="container-error-message" *ngIf="registroForm.controls.email.hasError('pattern')">
+                                    El Correo no es valido
+                                  </div>
+                            </div>
+                              <div class="wrap-input100 validate-input m-b-16" > <input class="input100" type="password" formControlName="password" placeholder="Contraseña"> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-lock"></span> </span> </div>
+                              <div class="alert-danger"  *ngIf="registroForm.controls.password.invalid  && (registroForm.controls.password.dirty || registroForm.controls.password.touched)" >
+                                <div class="container-error-message" *ngIf="registroForm.controls.password.hasError('required')">
+                                    La Contraseña is requerida
+                                  </div>
+                                  <div class="container-error-message" *ngIf="registroForm.controls.password.hasError('minlength')">
+                                    La Contraseña debe tener minimo 6 caracteres
+                                  </div>
+                            </div>
                               
-                              <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn"> Registrarme </button> </div>
-                              <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn bg-success" (click)="irLogin()"> Ya tengo una cuenta </button> </div>
+                              <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn " type="submit" > Registrarme </button> </div>
+                              <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn bg-success"> Ya tengo una cuenta </button> </div>
                           </form>
                       </div>
                   </div>
