agregando mejoras :fire:

--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -50,7 +50,7 @@
                             </div>
                               
                               <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn " type="submit" > Registrarme </button> </div>
-                              <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn bg-success"> Ya tengo una cuenta </button> </div>
+                              <div class="container-login100-form-btn p-t-25"> <button class="login100-form-btn bg-success" [routerLink]="['/login']"> Ya tengo una cuenta </button> </div>
                           </form>
                       </div>
                   </div>
