se agregar perfil

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -8,8 +8,27 @@
                     <div class="login_topimg"> </div>
                     <div class="wrap-login100">
                         <form [formGroup]="loginForm" (ngSubmit)="loguearse()" class="login100-form validate-form"> <span class="login100-form-title "> Login </span> <span class="login100-form-subtitle m-b-16">a su cuenta </span>
-                            <div class="wrap-input100 validate-input m-b-16" data-validate="Valid email is required: ex@abc.xyz"> <input class="input100" type="email" formControlName="email" placeholder="Username"> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
+                            <div class="wrap-input100 validate-input m-b-16" data-validate="Valid email is required: ex@abc.xyz"> <input class="input100" type="email" formControlName="email" placeholder="Correo"> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-user"></span> </span> </div>
+                            <div class="alert-danger"  *ngIf="loginForm.controls.email.invalid  && (loginForm.controls.email.dirty || loginForm.controls.email.touched)" >
+                                <div class="container-error-message" *ngIf="loginForm.controls.email.hasError('required')">
+                                    El Correo is requerido
+                                  </div>
+                                  <div class="container-error-message" *ngIf="loginForm.controls.email.hasError('minlength')">
+                                    El Correo debe tener minimo 11 caracteres
+                                  </div>
+                                  <div class="container-error-message" *ngIf="loginForm.controls.email.hasError('pattern')">
+                                    El Correo no es valido
+                                  </div>
+                            </div>
                             <div class="wrap-input100 validate-input m-b-16" data-validate="Password is required"> <input class="input100" type="password" formControlName="password" placeholder="Password"> <span class="focus-input100"></span> <span class="symbol-input100"> <span class="glyphicon glyphicon-lock"></span> </span> </div>
+                            <div class="alert-danger"  *ngIf="loginForm.controls.password.invalid  && (loginForm.controls.password.dirty || loginForm.controls.password.touched)" >
+                                <div class="container-error-message" *ngIf="loginForm.controls.password.hasError('required')">
+                                    La Contraseña is requerida
+                                  </div>
+                                  <div class="container-error-message" *ngIf="loginForm.controls.password.hasError('minlength')">
+                                    La Contraseña debe tener minimo 6 caracteres
+                                  </div>
+                            </div>
                             <div class="flex-sb-m w-full p-b-30">
                                 <div class="contact100-form-checkbox"> <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me"> <label class="label-checkbox100" for="ckb1"> Remember me </label> </div>
                                 <div> <a href="#" class="txt1"> Olvido su contraseña? </a> </div>
