--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -418,3 +418,14 @@ input {
     max-width: 50%;
 }
 }
+
+.alert-danger {
+    color: #721c24;
+    background: #f8d7da;
+    border-color: #f5c6cb;
+    margin-bottom: 5px;
+  }
+
+  .container-error-message {
+    padding: 3px;
+  }
