--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -21,7 +21,7 @@
                                             <h6 class="text-muted f-w-400">luisprado0095@gmail.com</h6>
                                         </div>
                                         <div class="col-sm-4">
-                                            <p class="m-b-10 f-w-600">Phone</p>
+                                            <p class="m-b-10 f-w-600">Celular</p>
                                             <h6 class="text-muted f-w-400">1140877970</h6>
                                         </div>
                                     </div>
